Hey @wynandbothma, made some changes... * Size fix for portrait view profile text (spacing between animal profile images and the text) * Increased the spacing above the animal size-filter from 50px to 60px

--- a/www/css/main-portrait.css
+++ b/www/css/main-portrait.css
@@ -356,7 +356,7 @@
         margin: 0px 0 0 14px;
         background-color: rgba(71, 68, 73, 0.9);
        display: none; /* // hide by default, must be last style*/
-    
+
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
 }
@@ -391,7 +391,7 @@
         background-color: #68666a;
         /*position: absolute;*/
         border-radius: 5px;
-    
+
         /* max-height: 400px; */
         /* overflow-y: scroll; */
 }
@@ -417,7 +417,7 @@
         -webkit-transition: left 0.2s ease-in;
         transition: left 0.2s ease-in;
         /* float: left; */
-    
+
         background-color: rgba(71, 68, 73, 0.9); display: none; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;
 }
     .letter-heading {
@@ -533,9 +533,6 @@
     }
 
     .animal-top {
-/*        // width: 200px;*/
-        height: 500px;
-/*        //display: block;*/
         margin-top:15px;
     }
 
@@ -579,7 +576,7 @@
         text-shadow: 1px 1px 2px #000;
         text-align: center;
         text-transform: uppercase;
-        
+
 
 
         font-size: 11px;
@@ -764,9 +761,9 @@
         font-size: 8px;
 /*        //border: black solid thin;*/
     }
-    
-    
-    
+
+
+
     #howto-size {
     text-align: center;
     /* margin-bottom: 500px; */
@@ -866,5 +863,5 @@ color: #fff;
 text-shadow: 1px 1px 2px #000;
 line-height: 55px;
 }
- 
+
 }
